--- a/MusicVideo/MusicVideo.Website/wwwroot/css/site.css
+++ b/MusicVideo/MusicVideo.Website/wwwroot/css/site.css
@@ -12,6 +12,43 @@ a {
   color: #0366d6;
 }
 
+.ml1 {
+    font-weight: 900;
+    font-size: 3.5em;
+}
+
+.ml1 .letter {
+        display: inline-block;
+        line-height: 1em;
+        color: orange;
+    }
+
+.ml1 .text-wrapper {
+        position: relative;
+        display: inline-block;
+        padding-top: 0.1em;
+        padding-right: 0.05em;
+        padding-bottom: 0.15em;
+    }
+
+.ml1 .line {
+        opacity: 0;
+        position: absolute;
+        left: 0;
+        height: 3px;
+        width: 100%;
+        background-color: #ff6a00;
+        transform-origin: 0 0;
+    }
+
+.ml1 .line1 {
+        top: 0;
+    }
+
+.ml1 .line2 {
+        bottom: 0;
+    }
+
 h1 {
     color: #ff6a00;
     font-family: Arial, Helvetica, sans-serif
